--- a/app/globals.css
+++ b/app/globals.css
@@ -276,15 +276,15 @@ body {
 
   /* SHADCN OVERRIDES */
   .select-field {
-    @apply w-full bg-grey-50 h-[54px] placeholder:text-grey-500 rounded-full p-regular-16 px-5 py-3 border-none focus-visible:ring-transparent focus:ring-transparent !important;
+    @apply w-full bg-grey-50 h-[36px] md:h-[45px] placeholder:text-grey-500 rounded-full p-regular-10 md:p-regular-12 px-3 md:px-6 py-2 md:py-3 border-none focus-visible:ring-transparent focus:ring-transparent !important;
   }
 
   .input-field {
-    @apply bg-grey-50 h-[54px] focus-visible:ring-offset-0 placeholder:text-grey-500 rounded-full p-regular-16 px-4 py-3 border-none focus-visible:ring-transparent !important;
+    @apply w-full bg-grey-50 h-[36px] md:h-[45px] focus-visible:ring-offset-0 placeholder:text-grey-500 rounded-full p-regular-10 md:p-regular-12 py-2 md:py-3 border-none focus-visible:ring-transparent !important;
   }
 
   .textarea {
-    @apply bg-grey-50 flex flex-1 placeholder:text-grey-500 p-regular-16 px-5 py-3 border-none focus-visible:ring-transparent !important;
+    @apply bg-grey-50 flex flex-1 min-h-[210px] placeholder:text-grey-500 p-regular-10 md:p-regular-12 px-3 md:px-6 py-2 md:py-3  border-none focus-visible:ring-transparent !important;
   }
 
   .button {
