--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@ body {
     hue-rotate(32deg) brightness(98%) contrast(92%);
 }
 
-/* ========================================== TAILWIND STYLES */
+/* ========================================== TAILWIND STYLES ==========================================  */
 @layer utilities {
   .wrapper {
     @apply max-w-7xl lg:mx-auto px-5 sm:px-10 md:px-16 xl:px-0 w-full;
@@ -97,16 +97,17 @@ body {
   }
 
   /* TYPOGRAPHY */
+
+  /* HEADINGS */
   /* 64 */
   .h1-bold {
-    @apply font-bold text-[48px] leading-[48px] lg:text-[48px] lg:leading-[60px]  xl:text-[58px] xl:leading-[74px];
+    @apply font-bold text-[48px] leading-[48px] lg:text-[48px] lg:leading-[60px] xl:text-[58px] xl:leading-[74px];
   }
 
   /* 40 */
   .h2-bold {
     @apply font-bold text-[32px] leading-[40px] lg:text-[36px] lg:leading-[44px] xl:text-[40px] xl:leading-[48px];
   }
-
   .h2-medium {
     @apply font-medium text-[32px] leading-[40px] lg:text-[36px] lg:leading-[44px] xl:text-[40px] xl:leading-[48px];
   }
@@ -115,7 +116,6 @@ body {
   .h3-bold {
     @apply font-bold text-[24px] leading-[32px] sm:text-[26px] sm:leading-[34px] md:text-[28px] md:leading-[36px] lg:text-[32px] lg:leading-[40px];
   }
-
   .h3-medium {
     @apply font-medium text-[24px] leading-[32px] sm:text-[26px] sm:leading-[34px] md:text-[28px] md:leading-[36px] lg:text-[32px] lg:leading-[40px];
   }
@@ -124,48 +124,43 @@ body {
   .h4-bold {
     @apply font-bold text-[20px] leading-[28px] sm:text-[22px] sm:leading-[30px] md:text-[24px] md:leading-[32px] lg:text-[28px] lg:leading-[36px];
   }
-
   .h4-medium {
     @apply font-medium text-[20px] leading-[28px] sm:text-[22px] sm:leading-[30px] md:text-[24px] md:leading-[32px] lg:text-[28px] lg:leading-[36px];
   }
-
     
   /* 18 */
   .h5-bold {
-    @apply font-bold text-[18px] leading-[26px] sm:text-[20px] sm:leading-[28px] md:text-[22px] md:leading-[30px] lg:text-[24px] lg:leading-[32px];
+    @apply font-bold text-[16px] leading-[26px] sm:text-[20px] sm:leading-[28px] md:text-[22px] md:leading-[30px] lg:text-[24px] lg:leading-[32px];
   }
-
   .h5-medium {
-    @apply font-medium text-[18px] leading-[26px] sm:text-[20px] sm:leading-[28px] md:text-[22px] md:leading-[30px] lg:text-[24px] lg:leading-[32px];
+    @apply font-medium text-[16px] leading-[26px] sm:text-[20px] sm:leading-[28px] md:text-[22px] md:leading-[30px] lg:text-[24px] lg:leading-[32px];
   }
 
-
+  /* REGULAR */
   /* 24 */
   .p-bold-24 {
     @apply font-bold text-[24px] leading-[36px];
   }
-
+  .p-semibold-24 {
+    @apply font-semibold text-[24px] leading-[36px];
+  }
   .p-medium-24 {
     @apply font-medium text-[24px] leading-[36px];
   }
-
   .p-regular-24 {
     @apply font-normal text-[24px] leading-[36px];
   }
 
   /* 20 */
   .p-bold-20 {
-    @apply font-bold text-[20px] leading-[30px] tracking-[2%];
+    @apply text-[20px] font-bold leading-[30px] tracking-[2%];
   }
-
   .p-semibold-20 {
     @apply text-[20px] font-semibold leading-[30px] tracking-[2%];
   }
-
   .p-medium-20 {
     @apply text-[20px] font-medium leading-[30px];
   }
-
   .p-regular-20 {
     @apply text-[20px] font-normal leading-[30px] tracking-[2%];
   }
@@ -174,24 +169,20 @@ body {
   .p-semibold-18 {
     @apply text-[18px] font-semibold leading-[28px] tracking-[2%];
   }
-
   .p-medium-18 {
     @apply text-[18px] font-medium leading-[28px];
   }
-
   .p-regular-18 {
     @apply text-[18px] font-normal leading-[28px] tracking-[2%];
   }
 
   /* 16 */
-  .p-bold-16 {
-    @apply text-[16px] font-bold leading-[24px];
+  .p-semibold-16 {
+    @apply text-[16px] font-semibold leading-[24px];
   }
-
   .p-medium-16 {
     @apply text-[16px] font-medium leading-[24px];
   }
-
   .p-regular-16 {
     @apply text-[16px] font-normal leading-[24px];
   }
@@ -200,37 +191,31 @@ body {
   .p-semibold-14 {
     @apply text-[14px] font-semibold leading-[20px];
   }
-
   .p-medium-14 {
     @apply text-[14px] font-medium leading-[20px];
   }
-
   .p-regular-14 {
     @apply text-[14px] font-normal leading-[20px];
   }
 
   /* 12 */
   .p-semibold-12 {
-    @apply text-[12px] font-semibold leading-[20px];
+    @apply text-[12px] font-semibold leading-[18px];
   }
-
   .p-medium-12 {
-    @apply text-[12px] font-medium leading-[20px];
+    @apply text-[12px] font-medium leading-[18px];
   }
-
   .p-regular-12 {
-    @apply text-[12px] font-normal leading-[20px];
+    @apply text-[12px] font-normal leading-[18px];
   }
 
   /* 11 */
   .p-semibold-11 {
     @apply text-[11px] font-semibold leading-[16px];
   }
-
   .p-medium-11 {
     @apply text-[11px] font-medium leading-[16px];
   }
-
   .p-regular-11 {
     @apply text-[11px] font-normal leading-[16px];
   }
@@ -239,42 +224,36 @@ body {
   .p-semibold-10 {
     @apply text-[10px] font-semibold leading-[16px];
   }
-
   .p-medium-10 {
     @apply text-[10px] font-medium leading-[16px];
   }
-
   .p-regular-10 {
     @apply text-[10px] font-normal leading-[16px];
   }
   
   /* 9 */
+  .p-semibold-9 {
+    @apply text-[9px] font-semibold leading-[14px];
+  }
   .p-regular-9 {
     @apply text-[9px] font-normal leading-[14px];
   }
-
   .p-medium-9 {
     @apply text-[9px] font-medium leading-[14px];
   }
 
-  .p-semibold-9 {
-    @apply text-[9px] font-semibold leading-[14px];
-  }
-
   /* 8 */
+  .p-semibold-8 {
+    @apply text-[8px] font-semibold leading-[12px];
+  }
   .p-regular-8 {
     @apply text-[8px] font-normal leading-[12px];
   }
-
   .p-medium-8 {
     @apply text-[8px] font-medium leading-[12px];
   }
 
-  .p-semibold-8 {
-    @apply text-[8px] font-semibold leading-[12px];
-  }
-
-  /* SHADCN OVERRIDES */
+  /* ========================================== SHADCN OVERRIDES ========================================== */
   .select-field {
     @apply w-full bg-grey-50 h-[36px] md:h-[45px] placeholder:text-grey-500 rounded-full p-regular-10 md:p-regular-12 px-3 md:px-6 py-2 md:py-3 border-none focus-visible:ring-transparent focus:ring-transparent !important;
   }
@@ -300,7 +279,7 @@ body {
   }
 }
 
-/* ========================================== CLERK STYLES */
+/* ========================================== CLERK STYLES ========================================== */
 .cl-logoImage {
   height: 38px;
 }
@@ -323,7 +302,7 @@ body {
   background-color: #705CF7
 }
 
-/* ========================================== REACT-DATEPICKER STYLES */
+/* ========================================== REACT-DATEPICKER STYLES ========================================== */
 .datePicker {
   width: 100%;
 }
